--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -242,11 +242,11 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top right no-repeat;
+  background: url("../img/hero-bg.jpg") center no-repeat;
   background-size: cover;
   position: relative;
 }
-@media (min-width: 200px) {
+@media (min-width: 992px) {
   #hero {
     padding-right: 100px;
   }
@@ -291,7 +291,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero .social-links a:hover {
   color: #0563bb;
 }
-@media (max-width: 300px) {
+@media (max-width: 992px) {
   #hero {
     text-align: center;
   }
